Added a new key - Privacy - Photo Library Usage Description to the Info.plist that allows to use a photolibrary.

--- a/PresentBaseSwift3.0/Info.plist
+++ b/PresentBaseSwift3.0/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>To display images of the people you want to give presents to.</string>
 	<key>LSApplicationCategoryType</key>
 	<string></string>
 	<key>CFBundleDevelopmentRegion</key>
